--- a/lamp/styles/styles.css
+++ b/lamp/styles/styles.css
@@ -1,5 +1,3 @@
-
-
 .content-container {
     display: flex;
     height: 100vh;
@@ -12,3 +10,10 @@
 img {
     cursor: pointer;
 }
+
+
+#restore-button {
+    position: absolute;
+    top: 50px
+}
+
